Add test using Gradle 4.5