@@ -55,6 +55,7 @@ task functionalTest(type: Test) {
         testClassesDirs = sourceSets.functionalTest.output.classesDirs
     }
     classpath = sourceSets.functionalTest.runtimeClasspath
+    jvmArgs "-XX:MaxPermSize=512m"
 
     reports {
         html.destination = project.file("$html.destination/functional")
